Remove some further options when no email support is enabled.
The removed configuration options are: hostname-for-emails,
from-email-address.  Make the sample configuration a little bit easier
to comprehend as well.

--- a/bead.config
+++ b/bead.config
@@ -3,23 +3,23 @@
 
 user-actions-log:         "log/useractions.log"
 session-timeout:          1200 # sec
-hostname-for-emails:      "http://127.0.0.1:8000"
-from-email-address:       "noreply@bead.org"
+# This is applicable only if standalone configuration is used.
+#hostname-for-emails:      "http://127.0.0.1:8000"
+#from-email-address:       "noreply@bead.org"
 default-login-language:   "en"
 default-timezone:         "UTC"
 timezone-info-directory:  "/usr/share/zoneinfo"
 max-upload-size:          128 # KiB
 
 # Please choose either "standalone" or "ldap"
-login-config:
-# standalone:
-  username-regexp:          "^[A-Za-z0-9]{6}$"
-  username-regexp-example:  "QUER42"
+#login-config:
+#  username-regexp:          "^[A-Za-z0-9]{6}$"
+#  username-regexp-example:  "QUER42"
 
-# ldap:
-  ticket-temporary-dir:  '/tmp/'
-  login-time-out-in-sec: 5
-  no-of-login-threads:   4
-  uid-key:   'uid'
-  name-key:  'name'
-  email-key: 'email'
+#login-config:
+#  ticket-temporary-dir:  '/tmp/'
+#  login-time-out-in-sec: 5
+#  no-of-login-threads:   4
+#  uid-key:   'uid'
+#  name-key:  'name'
+#  email-key: 'email'
