Default language is read from the Accept-Language header at the login page.

--- a/Bead.cabal
+++ b/Bead.cabal
@@ -255,6 +255,7 @@ Library
     Bead.View.DataDir
     Bead.View.DictionaryLoader
     Bead.View.ErrorPage
+    Bead.View.Headers.AcceptLanguage
     Bead.View.Fay.Hooks
     Bead.View.Fay.HookIds
     Bead.View.Fay.JSON.ServerSide
