Add a dummy module for SQL-based notifications.
As notifications are not actively used in the system as of yet, it can be
acceptable to just add dummy definitions for the missing functions.  This
makes it possible to build the code with the SQLite flag when (build)
testing other features.

--- a/Bead.cabal
+++ b/Bead.cabal
@@ -87,6 +87,7 @@ Library
       Bead.Persistence.SQL.Group
       Bead.Persistence.SQL.Init
       Bead.Persistence.SQL.JSON
+      Bead.Persistence.SQL.Notification
       Bead.Persistence.SQL.Registration
       Bead.Persistence.SQL.Score
       Bead.Persistence.SQL.Submission
