--- a/.travis.yml
+++ b/.travis.yml
@@ -86,6 +86,9 @@ install:
                   timezone-series-0.1.4
                   timezone-olson-0.1.6
                   --force-reinstalls
+  - cabal install persistent-1.3.1.1
+                  persistent-sqlite-1.3.0.5
+                  persistent-template-1.3.1.4
 
 script:
   - cabal install QuickCheck-2.6
@@ -97,4 +100,7 @@ script:
                   tasty-hunit-0.9.2
                   tasty-quickcheck-0.8.3.2
   - cabal configure -v2 -f Tests
+  - cabal test
+  - cabal clean
+  - cabal configure -v2 -f "Tests SQLite LDAP"
   - cabal test
