--- a/.travis.yml
+++ b/.travis.yml
@@ -67,6 +67,9 @@ install:
                   digest-0.0.1.2
                   zip-archive-0.2.3.7
                   pandoc-1.12.3.3
+                  persistent-1.3.1.1
+                  persistent-sqlite-1.3.0.5
+                  persistent-template-1.3.1.4
   - cabal install pqueue-1.2.1
                   regex-tdfa-1.2.0
                   unix-compat-0.4.1.4
@@ -86,9 +89,6 @@ install:
                   timezone-series-0.1.4
                   timezone-olson-0.1.6
                   --force-reinstalls
-  - cabal install persistent-1.3.1.1
-                  persistent-sqlite-1.3.0.5
-                  persistent-template-1.3.1.4
 
 script:
   - cabal install QuickCheck-2.6
