--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 env:
-  - CABALVER=1.18 GHCVER=7.8.3
+  - CABALVER=1.20 GHCVER=7.8.3
 
 before_install:
   - travis_retry sudo add-apt-repository -y ppa:hvr/ghc
@@ -100,7 +100,7 @@ script:
                   tasty-hunit-0.9.2
                   tasty-quickcheck-0.8.3.2
   - cabal configure -v2 -f Tests
-  - cabal test --log=/dev/stdout
+  - cabal test --log=/dev/stdout --show-details=streaming
   - cabal clean
   - cabal configure -v2 -f "Tests SQLite LDAP"
-  - cabal test --log=/dev/stdout
+  - cabal test --log=/dev/stdout --show-details=streaming
