--- a/Bead.cabal
+++ b/Bead.cabal
@@ -107,11 +107,6 @@ Library
 
   if flag(Tests)
     CPP-Options: -DTEST
-    Build-Depends:
-      QuickCheck,
-      tasty >=0.10 && <0.11,
-      tasty-hunit >=0.9 && <0.10,
-      tasty-quickcheck >=0.8 && <0.9
 
   if flag(LDAP)
     CPP-Options: -DLDAPEnabled
@@ -134,60 +129,62 @@ Library
       Bead.View.ResetPassword
 
   Build-Depends:
-    aeson,
-    async,
-    base,
-    blaze-html,
-    blaze-markup,
-    bytestring,
-    containers,
-    clientsession,
-    deepseq,
-    directory,
-    hashable,
+    aeson == 0.7.0.6,
+    async == 2.0.1.5,
+    base == 4.7.0.1,
+    blaze-html == 0.7.0.2,
+    blaze-markup == 0.6.1.0,
+    bytestring == 0.10.4.0,
+    containers == 0.5.5.1,
+    clientsession == 0.9.1.1,
+    deepseq == 1.3.0.2,
+    directory == 1.2.1.0,
+    hashable == 1.2.2.0,
     haskell-src-exts == 1.15.0.1,
-    fay,
-    fay-jquery,
-    fay-text,
-    filepath,
-    ghc,
-    ghc-paths,
-    hastache >= 0.6,
-    HUnit >=1.2 && <1.3,
-    json >= 0.7,
-    lens,
-    mime-mail,
-    MissingH,
-    MonadCatchIO-transformers,
-    monad-logger >= 0.3,
-    old-locale,
-    pandoc >= 1.12 && < 1.13,
+    HUnit == 1.2.5.2,
+    fay >= 0.20 && < 0.21,
+    fay-jquery >= 0.6.0 && < 0.6.1,
+    fay-text >= 0.3.0 && < 0.3.2,
+    filepath == 1.3.0.2,
+    ghc == 7.8.3,
+    ghc-paths == 0.1.0.9,
+    hastache >= 0.6 && < 0.7,
+    json >= 0.7 && < 0.8,
+    lens == 4.3.3,
+    mime-mail == 0.4.8.2,
+    MissingH == 1.2.1.0,
+    MonadCatchIO-transformers == 0.3.1.0,
+    monad-logger == 0.3.13.1,
+    old-locale == 1.0.0.6,
+    pandoc >= 1.12 && < 1.14,
+    persistent-sqlite >= 1.3 && < 1.4,
+    persistent-template >= 1.3 && < 1.4,
     pqueue >= 1.2.0 && < 2.0,
-    mtl,
+    mtl >= 2.0 && < 2.4,
     process >= 1.2.0 && < 2.0,
-    random,
-    regex-tdfa,
-    snap,
-    snap-core,
-    snap-server,
-    snap-blaze,
+    random == 1.1,
+    regex-tdfa == 1.2.0,
+    snap >= 0.13 && < 0.14,
+    snap-core >= 0.9 && < 0.10,
+    snap-server >= 0.9 && < 0.10,
+    snap-blaze >= 0.2 && < 0.3,
     snaplet-fay == 0.3.3.7,
-    stm,
-    syb,
-    temporary,
-    text,
-    time,
-    timezone-olson >= 0.1.4,
-    timezone-series >= 0.1.2,
-    transformers,
-    utf8-string,
-    unix,
+    stm == 2.4.4,
+    syb == 0.4.4,
+    temporary == 1.2.0.3,
+    text == 1.1.0.0,
+    time == 1.4.2,
+    timezone-olson == 0.1.6,
+    timezone-series == 0.1.4,
+    transformers >= 0.3 && < 0.5,
+    utf8-string == 0.3.8,
+    unix == 2.7.0.1,
     yaml >= 0.8.8.4 && < 0.9,
-    tasty >=0.10 && <0.11,
-    tasty-hunit >=0.9 && <0.10,
-    tasty-quickcheck >=0.8 && <0.9,
-    QuickCheck,
-    xmlhtml
+    tasty == 0.8.1.3,
+    tasty-hunit == 0.9.2,
+    tasty-quickcheck == 0.8.3,
+    QuickCheck == 2.8.1,
+    xmlhtml == 0.2.3.4
 
   Exposed-Modules:
     AdminMain
@@ -310,10 +307,19 @@ test-suite BeadTest
   Type:
     exitcode-stdio-1.0
   Build-Depends:
-    base, Bead, bytestring, containers, directory, filepath, HUnit,
-    QuickCheck, tasty, tasty-hunit, tasty-quickcheck,
-    temporary, test-framework, test-framework-hunit,
-    test-framework-quickcheck2, time, transformers
+    base == 4.7.0.1,
+    Bead == 0.1.0.0,
+    bytestring == 0.10.4.0,
+    containers == 0.5.5.1,
+    directory == 1.2.1.0,
+    filepath == 1.3.0.2,
+    HUnit == 1.2.5.2,
+    QuickCheck,
+    tasty == 0.8.1.3,
+    tasty-hunit == 0.9.2,
+    tasty-quickcheck == 0.8.3,
+    time == 1.4.2,
+    transformers >= 0.3 && < 0.5
   if flag(LDAP)
     CPP-Options: -DLDAPEnabled -DTEST
   else
