--- a/.travis.yml
+++ b/.travis.yml
@@ -102,7 +102,7 @@ install:
   - $CABAL install tasty-0.8.1.3
                    tasty-hunit-0.9.2
                    tasty-quickcheck-0.8.3
-  - $CABAL install --max-backjumps=-1 --reorder-goals --dependencies-only --enable-tests
+  - $CABAL install --max-backjumps=-1 --reorder-goals --dependencies-only --enable-tests --force-reinstalls
 
 script:
   - $CABAL configure -v2 -f Tests
