--- a/Bead.cabal
+++ b/Bead.cabal
@@ -318,6 +318,7 @@ test-suite BeadTest
     tasty == 0.8.1.3,
     tasty-hunit == 0.9.2,
     tasty-quickcheck == 0.8.3,
+    temporary==1.2.0.3,
     time == 1.4.2,
     transformers >= 0.3 && < 0.5
   if flag(LDAP)
