--- a/Bead.cabal
+++ b/Bead.cabal
@@ -142,13 +142,13 @@ Library
     hashable == 1.2.2.0,
     haskell-src-exts == 1.15.0.1,
     HUnit == 1.2.5.2,
-    fay >= 0.20 && < 0.21,
-    fay-jquery >= 0.6.0 && < 0.6.1,
-    fay-text >= 0.3.0 && < 0.3.2,
+    fay == 0.20.1.1,
+    fay-jquery == 0.6.0.2,
+    fay-text == 0.3.0.2,
     filepath == 1.3.0.2,
     ghc == 7.8.3,
     ghc-paths == 0.1.0.9,
-    hastache >= 0.6 && < 0.7,
+    hastache == 0.6.1,
     json >= 0.7 && < 0.8,
     lens == 4.3.3,
     mime-mail == 0.4.8.2,
@@ -156,18 +156,18 @@ Library
     MonadCatchIO-transformers == 0.3.1.0,
     monad-logger == 0.3.13.1,
     old-locale == 1.0.0.6,
-    pandoc >= 1.12 && < 1.14,
-    persistent-sqlite >= 1.3 && < 1.4,
-    persistent-template >= 1.3 && < 1.4,
-    pqueue >= 1.2.0 && < 2.0,
-    mtl >= 2.0 && < 2.4,
+    pandoc == 1.12.3.3,
+    persistent-sqlite == 1.3.0.5,
+    persistent-template == 1.3.1.4,
+    pqueue == 1.2.1,
+    mtl == 2.1.3.1,
     process >= 1.2.0 && < 2.0,
     random == 1.1,
     regex-tdfa == 1.2.0,
-    snap >= 0.13 && < 0.14,
-    snap-core >= 0.9 && < 0.10,
-    snap-server >= 0.9 && < 0.10,
-    snap-blaze >= 0.2 && < 0.3,
+    snap == 0.13.2.8,
+    snap-core == 0.9.6.3,
+    snap-server == 0.9.4.5,
+    snap-blaze == 0.2.1.2,
     snaplet-fay == 0.3.3.7,
     stm == 2.4.4,
     syb == 0.4.4,
@@ -176,10 +176,10 @@ Library
     time == 1.4.2,
     timezone-olson == 0.1.6,
     timezone-series == 0.1.4,
-    transformers >= 0.3 && < 0.5,
+    transformers == 0.3 && < 0.5,
     utf8-string == 0.3.8,
     unix == 2.7.0.1,
-    yaml >= 0.8.8.4 && < 0.9,
+    yaml == 0.8.10.1,
     tasty == 0.8.1.3,
     tasty-hunit == 0.9.2,
     tasty-quickcheck == 0.8.3,
