Switch to TemplateHaskell for handling dictionary entries.
This is a preparation for the upcoming commit.  Its purpose is to automatize
assignment of (unique) identifiers for each of the translation entries with
the use of Template Haskell.  It also helps with assigning labels of the same
name, so they could be tracked back much easier when something does not work
properly.

--- a/Bead.cabal
+++ b/Bead.cabal
@@ -172,6 +172,7 @@ Library
     snaplet-fay == 0.3.3.7,
     stm == 2.4.4,
     syb == 0.4.4,
+    template-haskell,
     temporary == 1.2.0.3,
     text == 1.1.0.0,
     time == 1.4.2,
@@ -281,7 +282,10 @@ Library
     Bead.View.Session
     Bead.View.Style
     Bead.View.TemplateAndComponentNames
-    Bead.View.TranslationEnum
+    Bead.View.Translation.Base
+    Bead.View.Translation.Entries
+    Bead.View.Translation.Enum
+    Bead.View.Translation.I18N
     Bead.View.UserActions
     Bead.View.Validators
     Snap.Snaplet.Auth.Backends.SafeJsonFile
