--- a/Bead.cabal
+++ b/Bead.cabal
@@ -137,6 +137,7 @@ Library
     bytestring == 0.10.4.0,
     containers == 0.5.5.1,
     clientsession == 0.9.1.1,
+    cpphs == 1.19,
     deepseq == 1.3.0.2,
     directory == 1.2.1.0,
     hashable == 1.2.2.0,
