--- a/Bead.cabal
+++ b/Bead.cabal
@@ -69,8 +69,8 @@ Library
     CPP-Options: -DSQLITE
 
     Build-Depends:
-      persistent-sqlite >= 1.3,
-      persistent-template >= 1.3,
+      persistent-sqlite >= 2.2 && < 2.3,
+      persistent-template >= 2.1 && < 2.2,
       resourcet >= 1.1
 
     Exposed-Modules:
@@ -158,6 +158,7 @@ Library
     monad-logger == 0.3.13.1,
     old-locale == 1.0.0.6,
     pandoc >= 1.12 && < 1.14,
+    persistent >= 2.2 && < 2.3,
     persistent-sqlite >= 2.2 && < 2.3,
     persistent-template >= 2.1 && < 2.2,
     pqueue >= 1.2.0 && < 2.0,
