Rework Kerberos and LDAP-based authentication into SSO support.
* Replace the LDAP configuration flag with SSO.

* The LDAP daemon will not do authentication but query of user information
  only.  This assumes that the LDAP client is properly configured so the
  ldapsearch(1) command can run without problems.  It may involve getting the
  required Kerberos ticket.

* The LDAP query command has become user-configurable, so the user may run
  (almost) any program that is able to feed the server with properly formatted
  LDAP attribute data, similarly to ldapsearch(1).

* The global configuration file (bead.config) has been updated by the changes.

* In place of the index page that contains a login form, a "landing page" has
  been put to inform the user on the single sign-on configuration and related
  settings.

* On caching new users, the `Snap.Auth` module is fed with random password and
  on each login, the users are logged in forcefully, so the authentication is
  fully delegated to the proxy that should call the server in the proper way.

* User registrations have been removed from the database in SSO mode.

--- a/bead.config
+++ b/bead.config
@@ -11,15 +11,18 @@ default-timezone:         "UTC"
 timezone-info-directory:  "/usr/share/zoneinfo"
 max-upload-size:          128 # KiB
 
-# Please choose either "standalone" or "ldap"
+# Please choose either "standalone" or "single sign-on"
+
+# standalone
 #login-config:
 #  username-regexp:          "^[A-Za-z0-9]{6}$"
 #  username-regexp-example:  "QUER42"
 
+# single sign-on
 #login-config:
-#  ticket-temporary-dir:  '/tmp/'
-#  login-time-out-in-sec: 5
-#  no-of-login-threads:   4
+#  timeout: 5 # ldap query timeout (seconds)
+#  threads: 4 # ldap queries
+## mapping of queried ldap attributes:
 #  uid-key:   'uid'
 #  name-key:  'name'
 #  email-key: 'email'
