--- a/Bead.cabal
+++ b/Bead.cabal
@@ -57,8 +57,8 @@ Flag MySQL
   Description:  Enable MySQL persistent layer
   Default:      False
 
-Flag LDAP
-  Description:  Enable LDAP based authentication
+Flag SSO
+  Description:  Enable authentication with Single Sign-On
   Default:      True
 
 Library
@@ -109,8 +109,8 @@ Library
   if flag(Tests)
     CPP-Options: -DTEST
 
-  if flag(LDAP)
-    CPP-Options: -DLDAPEnabled
+  if flag(SSO)
+    CPP-Options: -DSSO
 
     Build-Depends:
       base64-bytestring >= 1.0.0.1 && < 2,
@@ -118,7 +118,7 @@ Library
 
     Exposed-Modules:
       Bead.Daemon.LDAP
-      Bead.Daemon.LDAP.Auth
+      Bead.Daemon.LDAP.Query
       Bead.Daemon.LDAP.Result
   else
     CPP-Options: -DEmailEnabled
@@ -229,6 +229,7 @@ Library
     Bead.View.BeadContext
     Bead.View.BeadContextInit
     Bead.View.Command.Fayax
+    Bead.View.Common
     Bead.View.Content
     Bead.View.Content.Administration.Page
     Bead.View.Content.Assignment.Data
@@ -245,6 +246,7 @@ Library
     Bead.View.Content.NewTestScript.Page
     Bead.View.Content.Profile.Page
     Bead.View.Content.Public.ErrorPage
+    Bead.View.Content.Public.Index
     Bead.View.Content.Public.Login
     Bead.View.Content.Public.Registration
     Bead.View.Content.Public.ResetPassword
@@ -329,8 +331,8 @@ test-suite BeadTest
     temporary==1.2.0.3,
     time == 1.4.2,
     transformers >= 0.3 && < 0.5
-  if flag(LDAP)
-    CPP-Options: -DLDAPEnabled -DTEST
+  if flag(SSO)
+    CPP-Options: -DSSO -DTEST
   else
     CPP-Options: -DEmailEnabled -DTEST
   if flag(MySQL)
