--- a/bead.config
+++ b/bead.config
@@ -23,3 +23,11 @@ max-upload-size:          128 # KiB
 #  uid-key:   'uid'
 #  name-key:  'name'
 #  email-key: 'email'
+
+# When bead is compiled with MySQL support
+#mysql-config:
+#   database: 'bead-test-db'
+#   hostname: 'mysql.server.com'
+#   port: 3306
+#   username: 'bead'
+#   password: 'secret'
