--- a/Bead.cabal
+++ b/Bead.cabal
@@ -1,5 +1,5 @@
 Name:                Bead
-Version:             0.1.0.0
+Version:             2015.2.1
 License:             BSD3
 synopsis:            Online assignment management system
 Description:         E-learning snap based server for special teaching purposes
@@ -70,9 +70,9 @@ Library
 
     Build-Depends:
       persistent-sqlite >= 2.2 && < 2.3,
-      persistent-mysql >= 2.2 && < 2.3,
+      persistent-mysql >= 2.4 && < 2.5,
       persistent-template >= 2.1 && < 2.2,
-      resourcet >= 1.1
+      resourcet
 
     Exposed-Modules:
       Bead.Persistence.SQL
@@ -130,66 +130,67 @@ Library
       Bead.View.ResetPassword
 
   Build-Depends:
-    aeson == 0.7.0.6,
-    async == 2.0.1.5,
-    base == 4.7.0.1,
-    blaze-html == 0.7.0.2,
-    blaze-markup == 0.6.1.0,
-    bytestring == 0.10.4.0,
-    containers == 0.5.5.1,
-    clientsession == 0.9.1.1,
-    cpphs == 1.19,
-    deepseq == 1.3.0.2,
-    directory == 1.2.1.0,
-    hashable == 1.2.2.0,
-    haskell-src-exts == 1.15.0.1,
-    HUnit == 1.2.5.2,
-    fay >= 0.20 && < 0.21,
-    fay-jquery >= 0.6.0 && < 0.6.1,
-    fay-text >= 0.3.0 && < 0.3.2,
-    filepath == 1.3.0.2,
-    ghc == 7.8.3,
-    ghc-paths == 0.1.0.9,
-    hastache >= 0.6 && < 0.7,
-    json >= 0.7 && < 0.8,
-    lens == 4.3.3,
-    mime-mail == 0.4.8.2,
-    MissingH == 1.2.1.0,
-    MonadCatchIO-transformers == 0.3.1.0,
-    monad-logger == 0.3.13.1,
+    aeson >=0.8 && <0.9,
+    async >=2.0,
+    base >=4.7 && <4.8,
+    blaze-html >=0.8 && <0.9,
+    blaze-markup >=0.7 && <0.8,
+    bytestring >=0.10 && <0.11,
+    clientsession >=0.9 && <0.10,
+    containers >=0.5 && <0.6,
+    cpphs >=1.19 && <1.20,
+    deepseq >=1.3 && <1.4,
+    directory >=1.2 && <1.3,
+    ghc,
+    ghc-paths,
+    hashable >=1.2 && <1.3,
+    haskell-src-exts >=1.16 && <1.17,
+    HUnit >=1.2 && <1.3,
+    fay >=0.23 && <0.24,
+    fay-jquery >=0.6.1 && <0.7,
+    fay-text >=0.3.2 && <0.3.3,
+    filepath >=1.3 && <1.4,
+    hastache >=0.6 && <0.7,
+    json >=0.9 && <0.10,
+    lens >=4.12 && <4.13,
+    mime-mail >=0.4.9 && <0.4.10,
+    MissingH >=1.3 && <1.4,
+    MonadCatchIO-transformers >=0.3.1 && <0.3.2,
+    monad-logger >=0.3.13 && <0.4,
+    mtl >=2.0 && <2.4,
     old-locale == 1.0.0.6,
-    pandoc >= 1.14 && < 1.16,
-    persistent >= 2.2 && < 2.3,
-    persistent-sqlite >= 2.2 && < 2.3,
-    persistent-mysql >= 2.2 && < 2.3,
-    persistent-template >= 2.1 && < 2.2,
-    pqueue >= 1.2.0 && < 2.0,
-    mtl >= 2.0 && < 2.4,
-    process >= 1.2.0 && < 2.0,
+    pandoc >=1.14 && <1.16,
+    persistent >=2.2 && <2.3,
+    persistent-sqlite >=2.2 && <2.3,
+    persistent-mysql >=2.3 && <2.4,
+    persistent-template >=2.1 && <2.2,
+    pqueue >=1.2.0 && <2.0,
+    process >=1.2.0 && <2.0,
     random == 1.1,
+    resourcet,
     regex-tdfa == 1.2.0,
-    snap >= 0.13 && < 0.14,
-    snap-core >= 0.9 && < 0.10,
-    snap-server >= 0.9 && < 0.10,
-    snap-blaze >= 0.2 && < 0.3,
-    snaplet-fay == 0.3.3.7,
+    snap >=0.14 && <0.15,
+    snap-core >=0.9 && <0.10,
+    snap-server >=0.9 && <0.10,
+    snap-blaze >=0.2 && <0.3,
+    snaplet-fay >=0.3.3 && <0.3.4,
     stm == 2.4.4,
-    syb == 0.4.4,
-    template-haskell,
+    syb >=0.5 && <0.6,
+    template-haskell >=2.9 && <3.0,
     temporary == 1.2.0.3,
-    text == 1.1.0.0,
+    text >=1.2 && <1.3,
     time == 1.4.2,
-    timezone-olson == 0.1.6,
-    timezone-series == 0.1.4,
-    transformers >= 0.3 && < 0.5,
-    utf8-string == 0.3.8,
+    timezone-olson >=0.1.7 && <0.1.8,
+    timezone-series >=0.1.5 && <0.1.6,
+    transformers >=0.3.0.0 && <0.5,
+    tasty >=0.10 && <0.11,
+    tasty-hunit >=0.9 && <0.10,
+    tasty-quickcheck >=0.8.3 && <0.9,
+    QuickCheck >=2.8 && <2.9,
+    xmlhtml == 0.2.3.4,
+    utf8-string >=1 && <2,
     unix == 2.7.0.1,
-    yaml >= 0.8.8.4 && < 0.9,
-    tasty == 0.8.1.3,
-    tasty-hunit == 0.9.2,
-    tasty-quickcheck == 0.8.3,
-    QuickCheck == 2.8.1,
-    xmlhtml == 0.2.3.4
+    yaml >=0.8 && <0.9
 
   Exposed-Modules:
     AdminMain
@@ -318,19 +319,19 @@ test-suite BeadTest
     exitcode-stdio-1.0
   Build-Depends:
     base == 4.7.0.1,
-    Bead == 0.1.0.0,
-    bytestring == 0.10.4.0,
+    Bead == 2015.2.1,
+    bytestring >=0.10 && <0.11,
     containers == 0.5.5.1,
     directory == 1.2.1.0,
     filepath == 1.3.0.2,
     HUnit == 1.2.5.2,
-    QuickCheck,
-    tasty == 0.8.1.3,
-    tasty-hunit == 0.9.2,
-    tasty-quickcheck == 0.8.3,
-    temporary==1.2.0.3,
+    QuickCheck >=2.8 && <2.9,
+    tasty >=0.10 && <0.11,
+    tasty-hunit >=0.9 && <0.10,
+    tasty-quickcheck >=0.8.3 && <0.8.4,
+    temporary == 1.2.0.3,
     time == 1.4.2,
-    transformers >= 0.3 && < 0.5
+    transformers >=0.3 && <0.5
   if flag(SSO)
     CPP-Options: -DSSO -DTEST
   else
@@ -338,10 +339,10 @@ test-suite BeadTest
   if flag(MySQL)
     CPP-Options: -DTEST -DMYSQL
     Build-Depends:
-      persistent-sqlite >= 2.2 && < 2.3,
-      persistent-mysql >= 2.2 && < 2.3,
-      persistent-template >= 1.3,
-      resourcet >= 1.1
+      persistent-sqlite >=2.2 && <2.3,
+      persistent-mysql >=2.3 && <2.4,
+      persistent-template >=2.1 && <2.2,
+      resourcet
   else
     CPP-Options: -DTEST
   HS-Source-Dirs: test
