Free form evaluation
The free textual form evaluation provides more flexible process
in the submission handling.

--- a/Bead.cabal
+++ b/Bead.cabal
@@ -266,6 +266,7 @@ Library
     Bead.View.Content.SeeMore
     Bead.View.Content.SubmissionTable
     Bead.View.Content.Utils
+    Bead.View.Content.VisualConstants
     Bead.View.ContentHandler
     Bead.View.DataBridge
     Bead.View.DataDir
