Import KaTeX for displaying embedded math formulas in HTML pages.
It appears to be a better solution than MathML as it is properly supported
by Chrome/Chromium too.  Pandoc knows how to generate KaTeX formulas when
building the HTML page and it has a relatively small distribution size, so
it could be bundled easily.

--- a/Bead.cabal
+++ b/Bead.cabal
@@ -42,6 +42,73 @@ Data-Files:
   static/images/*.png,
   static/images/*.gif,
   static/icon.ico,
+  static/katex/contrib/auto-render.min.js,
+  static/katex/fonts/KaTeX_AMS-Regular.eot,
+  static/katex/fonts/KaTeX_AMS-Regular.ttf,
+  static/katex/fonts/KaTeX_AMS-Regular.woff,
+  static/katex/fonts/KaTeX_AMS-Regular.woff2,
+  static/katex/fonts/KaTeX_Caligraphic-Bold.eot,
+  static/katex/fonts/KaTeX_Caligraphic-Bold.ttf,
+  static/katex/fonts/KaTeX_Caligraphic-Bold.woff,
+  static/katex/fonts/KaTeX_Caligraphic-Bold.woff2,
+  static/katex/fonts/KaTeX_Caligraphic-Regular.eot,
+  static/katex/fonts/KaTeX_Caligraphic-Regular.ttf,
+  static/katex/fonts/KaTeX_Caligraphic-Regular.woff,
+  static/katex/fonts/KaTeX_Caligraphic-Regular.woff2,
+  static/katex/fonts/KaTeX_Fraktur-Bold.eot,
+  static/katex/fonts/KaTeX_Fraktur-Bold.ttf,
+  static/katex/fonts/KaTeX_Fraktur-Bold.woff,
+  static/katex/fonts/KaTeX_Fraktur-Bold.woff2,
+  static/katex/fonts/KaTeX_Fraktur-Regular.eot,
+  static/katex/fonts/KaTeX_Fraktur-Regular.ttf,
+  static/katex/fonts/KaTeX_Fraktur-Regular.woff,
+  static/katex/fonts/KaTeX_Fraktur-Regular.woff2,
+  static/katex/fonts/KaTeX_Main-Bold.eot,
+  static/katex/fonts/KaTeX_Main-Bold.ttf,
+  static/katex/fonts/KaTeX_Main-Bold.woff,
+  static/katex/fonts/KaTeX_Main-Bold.woff2,
+  static/katex/fonts/KaTeX_Main-Italic.eot,
+  static/katex/fonts/KaTeX_Main-Italic.ttf,
+  static/katex/fonts/KaTeX_Main-Italic.woff,
+  static/katex/fonts/KaTeX_Main-Italic.woff2,
+  static/katex/fonts/KaTeX_Main-Regular.eot,
+  static/katex/fonts/KaTeX_Main-Regular.ttf,
+  static/katex/fonts/KaTeX_Main-Regular.woff,
+  static/katex/fonts/KaTeX_Main-Regular.woff2,
+  static/katex/fonts/KaTeX_Math-BoldItalic.eot,
+  static/katex/fonts/KaTeX_Math-BoldItalic.ttf,
+  static/katex/fonts/KaTeX_Math-BoldItalic.woff,
+  static/katex/fonts/KaTeX_Math-BoldItalic.woff2,
+  static/katex/fonts/KaTeX_SansSerif-Regular.eot,
+  static/katex/fonts/KaTeX_SansSerif-Regular.ttf,
+  static/katex/fonts/KaTeX_SansSerif-Regular.woff,
+  static/katex/fonts/KaTeX_SansSerif-Regular.woff2,
+  static/katex/fonts/KaTeX_Script-Regular.eot,
+  static/katex/fonts/KaTeX_Script-Regular.ttf,
+  static/katex/fonts/KaTeX_Script-Regular.woff,
+  static/katex/fonts/KaTeX_Script-Regular.woff2,
+  static/katex/fonts/KaTeX_Size1-Regular.eot,
+  static/katex/fonts/KaTeX_Size1-Regular.ttf,
+  static/katex/fonts/KaTeX_Size1-Regular.woff,
+  static/katex/fonts/KaTeX_Size1-Regular.woff2,
+  static/katex/fonts/KaTeX_Size2-Regular.eot,
+  static/katex/fonts/KaTeX_Size2-Regular.ttf,
+  static/katex/fonts/KaTeX_Size2-Regular.woff,
+  static/katex/fonts/KaTeX_Size2-Regular.woff2,
+  static/katex/fonts/KaTeX_Size3-Regular.eot,
+  static/katex/fonts/KaTeX_Size3-Regular.ttf,
+  static/katex/fonts/KaTeX_Size3-Regular.woff,
+  static/katex/fonts/KaTeX_Size3-Regular.woff2,
+  static/katex/fonts/KaTeX_Size4-Regular.eot,
+  static/katex/fonts/KaTeX_Size4-Regular.ttf,
+  static/katex/fonts/KaTeX_Size4-Regular.woff,
+  static/katex/fonts/KaTeX_Size4-Regular.woff2,
+  static/katex/fonts/KaTeX_Typewriter-Regular.eot,
+  static/katex/fonts/KaTeX_Typewriter-Regular.ttf,
+  static/katex/fonts/KaTeX_Typewriter-Regular.woff,
+  static/katex/fonts/KaTeX_Typewriter-Regular.woff2,
+  static/katex/katex.min.css,
+  static/katex/katex.min.js,
 
   cookie
 
