--- a/Bead.cabal
+++ b/Bead.cabal
@@ -251,7 +251,7 @@ Library
     transformers >=0.3.0.0 && <0.5,
     tasty >=0.10 && <0.11,
     tasty-hunit >=0.9 && <0.10,
-    tasty-quickcheck >=0.8.3 && <0.9,
+    tasty-quickcheck >=0.8 && <0.9,
     QuickCheck >=2.8 && <2.9,
     xmlhtml == 0.2.3.4,
     utf8-string >=1 && <2,
@@ -381,9 +381,7 @@ Executable BeadAdmin
   else
     Buildable:      True
 
-test-suite BeadTest
-  Type:
-    exitcode-stdio-1.0
+executable BeadTest
   Build-Depends:
     base == 4.7.0.1,
     Bead == 2015.2.1,
@@ -392,10 +390,11 @@ test-suite BeadTest
     directory == 1.2.1.0,
     filepath == 1.3.0.2,
     HUnit == 1.2.5.2,
+    mtl >= 2.1 && <2.3,
     QuickCheck >=2.8 && <2.9,
     tasty >=0.10 && <0.11,
     tasty-hunit >=0.9 && <0.10,
-    tasty-quickcheck >=0.8.3 && <0.8.4,
+    tasty-quickcheck >=0.8 && <0.9,
     temporary == 1.2.0.3,
     time == 1.4.2,
     transformers >=0.3 && <0.5
