--- a/Bead.cabal
+++ b/Bead.cabal
@@ -332,6 +332,7 @@ Library
     Bead.View.Content.GetSubmission
     Bead.View.Content.GetCourseCsv
     Bead.View.Content.GetGroupCsv
+    Bead.View.Content.ScoreInfo
     Bead.View.Content.SeeMore
     Bead.View.Content.SubmissionTable
     Bead.View.Content.Utils
