The test executable should be only built with the "Tests" flag set.

--- a/Bead.cabal
+++ b/Bead.cabal
@@ -416,4 +416,7 @@ executable BeadTest
     CPP-Options: -DTEST
   HS-Source-Dirs: test
   Main-is: TestMain.hs
-
+  if flag(Tests)
+    Buildable:      True
+  else
+    Buildable:      False
