Able to log from startNotificationEmailDaemon

--- a/Bead.cabal
+++ b/Bead.cabal
@@ -272,6 +272,7 @@ Library
     Bead.Controller.Pages
     Bead.Controller.ServiceContext
     Bead.Controller.UserStories
+    Bead.Daemon.NotificationEmail              
     Bead.Daemon.Logout
     Bead.Daemon.TestAgent
     Bead.Domain.Entity.Assessment
