--- a/Bead.cabal
+++ b/Bead.cabal
@@ -311,6 +311,7 @@ Library
     Bead.View.Content.Home.Page
     Bead.View.Content.Home.View
     Bead.View.Content.NewTestScript.Page
+    Bead.View.Content.Notifications.Page
     Bead.View.Content.Profile.Page
     Bead.View.Content.Public.ErrorPage
     Bead.View.Content.Public.Index
