--- a/Bead.cabal
+++ b/Bead.cabal
@@ -292,6 +292,7 @@ Library
     Bead.Persistence.Persist
     Bead.Persistence.Relations
     Bead.Shared.Command
+    Bead.View.Anchor
     Bead.View.BeadContext
     Bead.View.BeadContextInit
     Bead.View.Command.Fayax
